Closed
Bug 1506076
Opened 7 years ago
Closed 7 years ago
MP4 video files cannot be open
Categories
(Firefox for Android Graveyard :: Audio/Video, defect)
Tracking
(firefox63 unaffected, firefox64 unaffected, firefox65 verified)
VERIFIED
FIXED
Firefox 65
| Tracking | Status | |
|---|---|---|
| firefox63 | --- | unaffected |
| firefox64 | --- | unaffected |
| firefox65 | --- | verified |
People
(Reporter: mlobontiuroman, Assigned: jya)
References
()
Details
(Keywords: regression)
Attachments
(2 files)
Devices:
- Samsung Galaxy Note 8 (Android 8.0);
- Xiaomi Mi4i (Android 5.0.2);
- Nexus 9 (Android 7.1.1).
Build:
- Nightly 65.0a1 (2018-11-08);
Steps to reproduce:
1. Go to http://techslides.com/sample-webm-ogg-and-mp4-video-files-for-html5
2. Tap on "Sample MP4 Video File".
Expected result:
The video should start.
Actual result:
Nightly displays an error "Video can`t be played because the file is corrupt".
Notes:
Not reproducible on Beta 64.0b7, nor Release 63.0.2.
Ran a regression:
Last good revision: c4e0c395c954bbd374e5bfa1e3b86758045732e6
First bad revision: f91c9161f99367afdcbca161f0274aa892cd2bbc
Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=c4e0c395c954bbd374e5bfa1e3b86758045732e6&tochange=f91c9161f99367afdcbca161f0274aa892cd2bbc
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → jyavenard
Flags: needinfo?(jyavenard)
| Assignee | ||
Comment 1•7 years ago
|
||
How that ever worked in the past is absolute mystery
Updated•7 years ago
|
Attachment #9024098 -
Attachment description: Bug 1506076 - P1. Mark video android decoder as needing AnnexB. r?jolin! → Bug 1506076 - Mark video android decoder as needing AnnexB. r?jolin!
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6a32be5a7100
Mark video android decoder as needing AnnexB. r=jolin,alwu
Comment 3•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 65
| Reporter | ||
Comment 4•7 years ago
|
||
Hi all,
Verified on Nightly 65.0a1 (2018-11-11) and not reproducible.
Devices: Samsung Galaxy Note 8 (Android 8.0), and Xiaomi Mi4i (Android 5.0.2).
Thanks!
Status: RESOLVED → VERIFIED
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•