Bug 1506076 - Mark video android decoder as needing AnnexB. r=jolin,alwu

It only used to work as the H264Converter used to check that the conversion needed was != kNeedAVCC (the default being kNone)

Differential Revision: https://phabricator.services.mozilla.com/D11526

--HG--
extra : moz-landing-system : lando